[package]
name = "solana-mcp"
version = "1.0.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.3", features = ["server", "macros", "transport-io"] }
tokio = { version = "1.46", features = ["full"] }
solana-rpc-client = "2.2"
solana-pubkey = "2.2"
solana-signature = "2.2"
solana-transaction-status = "2.2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
	"env-filter",
	"std",
	"fmt",
] }
